update raw latest tag

--- a/.github/workflows/sl7-minimal.yaml
+++ b/.github/workflows/sl7-minimal.yaml
@@ -45,7 +45,7 @@ jobs:
             ghcr.io/${{ github.repository }}
           tags: |
             # default
-            type=ref,pattern=latest
+            type=raw,value=latest
       
       - name: Build and push Docker images
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
