--- a/.github/workflows/sl7-minimal.yaml
+++ b/.github/workflows/sl7-minimal.yaml
@@ -3,11 +3,14 @@ name: Docker Image CI
 on:
   push:
     branches: [ develop ]
+    tags:
+      - 'v*'
     paths-ignore:
       - 'README.md'
       - 'c8/*'
       - 'sl7/*'
       - 'sl7-ci/*'
+
   workflow_dispatch:
 
 jobs:
@@ -45,6 +48,10 @@ jobs:
             ghcr.io/${{ github.repository }}
           tags: |
             type=raw,value=latest
+            # branch event
+            type=ref,event=branch
+            # tag event
+            type=ref,event=tag
       
       - name: Build and push Docker images
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
