--- a/c8-minimal/Dockerfile
+++ b/c8-minimal/Dockerfile
@@ -14,7 +14,7 @@ RUN yum clean all \
  && yum -y install libzstd git \
     make redhat-lsb-core glibc-devel \
     openssl-devel xz-devel bzip2-devel libcurl-devel libunwind-devel \
-    openssl  compat-openssl10 cyrus-sasl-devel xxhash xxhash-libs \
+    openssl  compat-openssl10 cyrus-sasl-devel xxhash xxhash-libs bzip2 \
  && yum clean all
 
 # Common system tools requried to run various bash scripts
