adding new workflow for making docker image with cvmfs mirror; fix entrypoint bug

--- a/sl7-ci/Dockerfile
+++ b/sl7-ci/Dockerfile
@@ -5,6 +5,7 @@ FROM dunedaq/sl7-minimal:latest
 MAINTAINER Pengfei Ding "dingpf@fnal.gov"
 ENV REFRESHED_AT 2021-03-18
 
-ADD cvmfs_mirror /cvmfs
+ADD image-sl7/cvmfs/dunedaq.opensciencegrid.org /cvmfs/dunedaq.opensciencegrid.org
+ADD image-sl7/cvmfs/dunedaq-development.opensciencegrid.org /cvmfs/dunedaq-development.opensciencegrid.org
 
-ENTRYPOINT ["/bin/bash"]
+ENTRYPOINT ["/bin/bash", "-l", "-c" ]
