--- a/.github/workflows/sl7-cvmfs.yaml
+++ b/.github/workflows/sl7-cvmfs.yaml
@@ -19,7 +19,7 @@ jobs:
 
   build_sl7_image_with_cvmfs_mirror:
     name: Build sl7 image with cvmfs mirror and push to multiple registries
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted]
     environment: dockerhub
     permissions:
       packages: write
@@ -31,23 +31,17 @@ jobs:
           repository: DUNE-DAQ/daq-docker
           path: daq-docker
       
-      - name: add CernVM-FS
-        uses: cvmfs-contrib/github-action-cvmfs@v2
-        with:
-          cvmfs_repositories: 'dunedaq.opensciencegrid.org,dunedaq-development.opensciencegrid.org'
-
       - name: Test CernVM-FS
         run: ls /cvmfs/dunedaq-development.opensciencegrid.org
 
       - name: Test CernVM-FS in docker and set up dbt workarea
         run: |
-             docker run --rm -v /cvmfs/dunedaq-development.opensciencegrid.org:/cvmfs/dunedaq-development.opensciencegrid.org -v /cvmfs/dunedaq.opensciencegrid.org:/cvmfs/dunedaq.opensciencegrid.org -v $GITHUB_WORKSPACE/daq-docker/sl7-ci:/scratch dunedaq/sl7-minimal:latest /scratch/build-release.sh
+             docker run --rm -v /home/dingpf/cvmfs_dunedaq-dev:/cvmfs/dunedaq-development.opensciencegrid.org -v /home/dingpf/cvmfs_dunedaq -v $GITHUB_WORKSPACE/daq-docker/sl7-ci:/scratch dunedaq/sl7-minimal:latest /scratch/build-release.sh
              ls $GITHUB_WORKSPACE/daq-docker/sl7-ci
 
       - name: create cvmfs mirror
         run: |
-             docker run --rm -v /cvmfs/dunedaq-development.opensciencegrid.org:/cvmfs/dunedaq-development.opensciencegrid.org -v /cvmfs/dunedaq.opensciencegrid.org:/cvmfs/dunedaq.opensciencegrid.org -v $GITHUB_WORKSPACE/daq-docker/sl7-ci:/scratch dunedaq/sl7-minimal:latest /scratch/create-image.sh 
-
+             docker run --rm -v /home/dingpf/cvmfs_dunedaq-dev:/cvmfs/dunedaq-development.opensciencegrid.org -v /home/dingpf/cvmfs_dunedaq -v $GITHUB_WORKSPACE/daq-docker/sl7-ci:/scratch dunedaq/sl7-minimal:latest /scratch/create-image.sh
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
         with:
