--- a/.github/workflows/sl7-cvmfs.yaml
+++ b/.github/workflows/sl7-cvmfs.yaml
@@ -36,12 +36,12 @@ jobs:
 
       - name: Test CernVM-FS in docker and set up dbt workarea
         run: |
-             docker run --rm -v /home/dingpf/cvmfs_dunedaq-dev:/cvmfs/dunedaq-development.opensciencegrid.org -v /home/dingpf/cvmfs_dunedaq -v $GITHUB_WORKSPACE/daq-docker/sl7-ci:/scratch dunedaq/sl7-minimal:latest /scratch/build-release.sh
+                docker run --rm -v /home/dingpf/cvmfs_dunedaq-dev:/cvmfs/dunedaq-development.opensciencegrid.org -v /home/dingpf/cvmfs_dunedaq:/cvmfs/dunedaq.opensciencegrid.org -v $GITHUB_WORKSPACE/daq-docker/sl7-ci:/scratch dunedaq/sl7-minimal:latest /scratch/build-release.sh
              ls $GITHUB_WORKSPACE/daq-docker/sl7-ci
 
       - name: create cvmfs mirror
         run: |
-             docker run --rm -v /home/dingpf/cvmfs_dunedaq-dev:/cvmfs/dunedaq-development.opensciencegrid.org -v /home/dingpf/cvmfs_dunedaq -v $GITHUB_WORKSPACE/daq-docker/sl7-ci:/scratch dunedaq/sl7-minimal:latest /scratch/create-image.sh
+                docker run --rm -v /home/dingpf/cvmfs_dunedaq-dev:/cvmfs/dunedaq-development.opensciencegrid.org -v /home/dingpf/cvmfs_dunedaq:/cvmfs/dunedaq.opensciencegrid.org -v $GITHUB_WORKSPACE/daq-docker/sl7-ci:/scratch dunedaq/sl7-minimal:latest /scratch/create-image.sh
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
         with:
