--- a/.github/workflows/sl7-cvmfs.yaml
+++ b/.github/workflows/sl7-cvmfs.yaml
@@ -42,6 +42,7 @@ jobs:
       - name: create cvmfs mirror
         run: |
             docker run --rm -v /home/dingpf/cvmfs_dunedaq-dev:/cvmfs/dunedaq-development.opensciencegrid.org -v /home/dingpf/cvmfs_dunedaq:/cvmfs/dunedaq.opensciencegrid.org -v $GITHUB_WORKSPACE/daq-docker/sl7-ci:/scratch dunedaq/sl7-minimal:latest /scratch/create-image.sh
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
         with:
@@ -72,3 +73,8 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+
+      - name: Clean up
+        if: always()
+        run: |
+            docker run --rm -v /home/dingpf/cvmfs_dunedaq-dev:/cvmfs/dunedaq-development.opensciencegrid.org -v /home/dingpf/cvmfs_dunedaq:/cvmfs/dunedaq.opensciencegrid.org -v $GITHUB_WORKSPACE:/scratch dunedaq/sl7-minimal:latest rm -rf /scratch/daq-docker
