--- a/.github/workflows/sl7-minimal.yaml
+++ b/.github/workflows/sl7-minimal.yaml
@@ -19,8 +19,7 @@ jobs:
 
   push_to_registries:
     name: Push Docker image to multiple registries
-    runs-on: self-hosted
-    #runs-on: ubuntu-latest
+    runs-on: ubuntu-latest
     environment: dockerhub
     permissions:
       packages: write
