--- a/.github/workflows/sl7.yaml
+++ b/.github/workflows/sl7.yaml
@@ -7,11 +7,11 @@ on:
       - 'v*'
     paths-ignore:
       - 'README.md'
-      - 'c8/*'
-      - 'c8-minimal/*'
-      - 'sl7-minimal/*'
-      - 'sl7-ci/*'
-      - '.github/*'
+      - 'c8/**'
+      - 'c8-minimal/**'
+      - 'sl7-minimal/**'
+      - 'sl7-ci/**'
+      - '.github/**'
 
   workflow_dispatch:
 
