--- a/.github/workflows/sl7-cvmfs.yaml
+++ b/.github/workflows/sl7-cvmfs.yaml
@@ -66,7 +66,7 @@ jobs:
       - name: Build and push Docker images
         uses: docker/build-push-action@v2
         with:
-          context: ${{ github.workspace }}/sl7-ci
+          context: ${{ github.workspace }}/daq-docker/sl7-ci
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
@@ -75,4 +75,4 @@ jobs:
         if: always()
         run: |
             ls $GITHUB_WORKSPACE/daq-docker
-            #docker run --rm -v $GITHUB_WORKSPACE:/scratch dunedaq/sl7-minimal:latest "rm -rf /scratch/daq-docker"
+            docker run --rm -v $GITHUB_WORKSPACE:/scratch dunedaq/sl7-minimal:latest "rm -rf /scratch/daq-docker"
