--- a/.github/workflows/c8-cvmfs.yaml
+++ b/.github/workflows/c8-cvmfs.yaml
@@ -1,4 +1,4 @@
-name: Build sl7-cvmfs docker image
+name: Build c8-cvmfs docker image
 
 on:
   push:
@@ -11,15 +11,15 @@ on:
       - 'c8-minimal/**'
       - 'sl7/**'
       - 'sl7-minimal/**'
-      - 'c8-ci/**'
+      - 'sl7-ci/**'
       - '.github/**'
 
   workflow_dispatch:
 
 jobs:
 
-  build_sl7_image_with_cvmfs_mirror:
-    name: Build sl7 image with cvmfs mirror and push to multiple registries
+  build_c8_image_with_cvmfs_mirror:
+    name: Build c8 image with cvmfs mirror and push to multiple registries
     runs-on: [self-hosted]
     environment: dockerhub
     permissions:
@@ -35,11 +35,11 @@ jobs:
       - name: set up dbt workarea
         id: setup_dev
         run: |
-            docker run --rm -v /home/dingpf/cvmfs_dunedaq-dev:/cvmfs/dunedaq-development.opensciencegrid.org -v /home/dingpf/cvmfs_dunedaq:/cvmfs/dunedaq.opensciencegrid.org -v $GITHUB_WORKSPACE/daq-docker/sl7-ci:/scratch dunedaq/sl7-minimal:latest /scratch/build-release.sh
+            docker run --rm -v /home/dingpf/cvmfs_dunedaq-dev:/cvmfs/dunedaq-development.opensciencegrid.org -v /home/dingpf/cvmfs_dunedaq:/cvmfs/dunedaq.opensciencegrid.org -v $GITHUB_WORKSPACE/daq-docker/c8-ci:/scratch dunedaq/c8-minimal:latest /scratch/build-release.sh
 
       - name: create cvmfs mirror
         run: |
-            docker run --rm -v /home/dingpf/cvmfs_dunedaq-dev:/cvmfs/dunedaq-development.opensciencegrid.org -v /home/dingpf/cvmfs_dunedaq:/cvmfs/dunedaq.opensciencegrid.org -v $GITHUB_WORKSPACE/daq-docker/sl7-ci:/scratch dunedaq/sl7-minimal:latest /scratch/create-image.sh
+            docker run --rm -v /home/dingpf/cvmfs_dunedaq-dev:/cvmfs/dunedaq-development.opensciencegrid.org -v /home/dingpf/cvmfs_dunedaq:/cvmfs/dunedaq.opensciencegrid.org -v $GITHUB_WORKSPACE/daq-docker/c8-ci:/scratch dunedaq/c8-minimal:latest /scratch/create-image.sh
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
@@ -52,14 +52,14 @@ jobs:
         uses: docker/metadata-action@v3
         with:
           images: |
-            dunedaq/sl7-minimal
+            dunedaq/c8-minimal
           tags: |
             type=raw,value=cvmfs
       
       - name: Build and push Docker images
         uses: docker/build-push-action@v2
         with:
-          context: ${{ github.workspace }}/daq-docker/sl7-ci
+          context: ${{ github.workspace }}/daq-docker/c8-ci
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
@@ -68,4 +68,4 @@ jobs:
         if: always()
         run: |
             ls $GITHUB_WORKSPACE/daq-docker
-            docker run --rm -v $GITHUB_WORKSPACE:/scratch dunedaq/sl7-minimal:latest "rm -rf /scratch/daq-docker"
+            docker run --rm -v $GITHUB_WORKSPACE:/scratch dunedaq/c8-minimal:latest "rm -rf /scratch/daq-docker"
