--- a/.github/workflows/c8-cvmfs.yaml
+++ b/.github/workflows/c8-cvmfs.yaml
@@ -20,7 +20,7 @@ jobs:
 
   build_c8_image_with_cvmfs_mirror:
     name: Build c8 image with cvmfs mirror and push to multiple registries
-    runs-on: [self-hosted]
+    runs-on: [self-hosted, cvmfs]
     environment: dockerhub
     permissions:
       packages: write
