--- a/.github/workflows/sl7-cvmfs.yaml
+++ b/.github/workflows/sl7-cvmfs.yaml
@@ -1,18 +1,8 @@
 name: Build sl7-cvmfs docker image
 
 on:
-  push:
-    branches: [ develop ]
-    tags:
-      - 'v*'
-    paths-ignore:
-      - 'README.md'
-      - 'c8/**'
-      - 'c8-minimal/**'
-      - 'sl7/**'
-      - 'sl7-minimal/**'
-      - 'c8-ci/**'
-      - '.github/**'
+  schedule:
+    - cron: "0 4 * * *"
 
   workflow_dispatch:
 
