--- a/c8-ci/Dockerfile
+++ b/c8-ci/Dockerfile
@@ -5,7 +5,11 @@ FROM dunedaq/c8-minimal:latest
 MAINTAINER Pengfei Ding "dingpf@fnal.gov"
 ENV REFRESHED_AT 2022-02-04
 
-ADD image-cs8/cvmfs/dunedaq.opensciencegrid.org /cvmfs/dunedaq.opensciencegrid.org
 ADD image-cs8/cvmfs/dunedaq-development.opensciencegrid.org /cvmfs/dunedaq-development.opensciencegrid.org
+ADD image-cs8/cvmfs/dunedaq-development.opensciencegrid.org /cvmfs/dunedaq-development.opensciencegrid.org
+ADD image-cs8/cvmfs/dunedaq.opensciencegrid.org/setup_dunedaq.sh /cvmfs/dunedaq.opensciencegrid.org/setup_dunedaq.sh
+ADD image-cs8/cvmfs/dunedaq.opensciencegrid.org/tools /cvmfs/dunedaq.opensciencegrid.org/tools
+ADD image-cs8/cvmfs/dunedaq.opensciencegrid.org/products /cvmfs/dunedaq.opensciencegrid.org/products
+ADD image-cs8/cvmfs/dunedaq.opensciencegrid.org/pypi-repo /cvmfs/dunedaq.opensciencegrid.org/pypi-repo
 
 ENTRYPOINT ["/bin/bash", "-l", "-c"]
