--- a/.github/workflows/c8-cvmfs.yaml
+++ b/.github/workflows/c8-cvmfs.yaml
@@ -58,4 +58,7 @@ jobs:
         run: |
             ls $GITHUB_WORKSPACE/daq-docker
             docker run --rm -v $GITHUB_WORKSPACE:/scratch dunedaq/c8-minimal:latest "rm -rf /scratch/daq-docker"
-            docker image prune
+            docker image prune -f
+            docker container prune -f
+            docker network prune -f
+            docker volume prune -f
