update workflow to not get triggered on modifications on un-releated Dockerfile

--- a/.github/workflows/c8-minimal.yaml
+++ b/.github/workflows/c8-minimal.yaml
@@ -9,9 +9,11 @@ on:
       - 'README.md'
       - 'sl7/**'
       - 'sl7-minimal/*'
+      - 'sl7-spack/*'
       - 'sl7-ci/**'
       - 'c8/**'
       - 'c8-ci/**'
+      - 'c8-spack/**'
       - '.github/**'
 
   workflow_dispatch:
