--- a/.github/workflows/c8.yaml
+++ b/.github/workflows/c8.yaml
@@ -9,7 +9,9 @@ on:
       - 'README.md'
       - 'sl7/**'
       - 'sl7-minimal/**'
+      - 'sl7-spack/**'
       - 'c8-minimal/**'
+      - 'c8-spack/**'
       - 'sl7-ci/**'
       - 'c8-ci/**'
       - '.github/**'
