ignore changes in c8-spack-externals in github actions

--- a/.github/workflows/c8-minimal.yaml
+++ b/.github/workflows/c8-minimal.yaml
@@ -12,6 +12,7 @@ on:
       - 'sl7-spack/*'
       - 'sl7-ci/**'
       - 'c8/**'
+      - 'c8-spack-externals/**'
       - 'c8-ci/**'
       - 'c8-spack/**'
       - '.github/**'
