--- a/.github/workflows/sl7-minimal.yaml
+++ b/.github/workflows/sl7-minimal.yaml
@@ -10,6 +10,7 @@ on:
       - 'c8/**'
       - 'c8-minimal/**'
       - 'c8-spack/**'
+      - 'c8-spack-externals/**'
       - 'sl7/**'
       - 'sl7-ci/**'
       - 'sl7-spack/**'
