--- a/.github/workflows/sl7.yaml
+++ b/.github/workflows/sl7.yaml
@@ -10,6 +10,7 @@ on:
       - 'c8/**'
       - 'c8-minimal/**'
       - 'c8-spack/**'
+      - 'c8-spack-externals/**'
       - 'sl7-spack/**'
       - 'sl7-minimal/**'
       - 'sl7-ci/**'
