fix abosolute path in Dockerfile

--- a/.github/workflows/c8-spack-externals.yaml
+++ b/.github/workflows/c8-spack-externals.yaml
@@ -35,11 +35,17 @@ jobs:
             dunedaq/c8-minimal
           tags: |
             type=raw,value=spack-externals
+
+      - name: copy over Dockerfile and pypi-repo to local cvmfs mirror
+        id: copy_dockerfile
+        run: |
+            cp  ${{ github.workspace }}/daq-docker/c8-spack-externals/Dockerfile /home/dingpf/cvmfs_dunedaq-dev/sandbox
+            rsync -lprt /home/dingpf/cvmfs_dunedaq/pypi-repo /home/dingpf/cvmfs_dunedaq-dev
       
       - name: Build and push Docker images
         uses: docker/build-push-action@v2
         with:
-          context: ${{ github.workspace }}/daq-docker/c8-spack-externals
+          context: /home/dingpf/cvmfs_dunedaq-dev/sandbox
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
@@ -47,7 +53,9 @@ jobs:
       - name: Clean up
         if: always()
         run: |
-            ls $GITHUB_WORKSPACE/daq-docker
+
+            rm -f /home/dingpf/cvmfs_dunedaq-dev/sandbox/Dockerfile
+            rm -rf /home/dingpf/cvmfs_dunedaq-dev/pypi-repo
             docker image prune -f
             docker container prune -f
             docker network prune -f
