--- a/.github/workflows/c8-minimal.yaml
+++ b/.github/workflows/c8-minimal.yaml
@@ -11,6 +11,7 @@ on:
       - 'sl7-minimal/*'
       - 'sl7-spack/*'
       - 'sl7-ci/**'
+      - 'sl7-spack-externals/**'
       - 'c8/**'
       - 'c8-spack-externals/**'
       - 'c8-ci/**'
