--- a/.github/workflows/sl7.yaml
+++ b/.github/workflows/sl7.yaml
@@ -11,6 +11,7 @@ on:
       - 'c8-minimal/**'
       - 'c8-spack/**'
       - 'c8-spack-externals/**'
+      - 'sl7-spack-externals/**'
       - 'sl7-spack/**'
       - 'sl7-minimal/**'
       - 'sl7-ci/**'
