--- a/sl7-spack-externals/Dockerfile
+++ b/sl7-spack-externals/Dockerfile
@@ -7,6 +7,8 @@ ENV REFRESHED_AT 2022-04-10
 
 ADD spack-externals /cvmfs/dunedaq.opensciencegrid.org/spack-externals
 ADD pypi-repo /cvmfs/dunedaq.opensciencegrid.org/pypi-repo
+ADD tools /cvmfs/dunedaq.opensciencegrid.org/tools
+ADD setup_dunedaq.sh /cvmfs/dunedaq.opensciencegrid.org/setup_dunedaq.sh
 
 
 ENTRYPOINT ["/bin/bash"]
