--- a/.github/workflows/c8-cvmfs.yaml
+++ b/.github/workflows/c8-cvmfs.yaml
@@ -10,7 +10,7 @@ jobs:
 
   build_c8_image_with_cvmfs_mirror:
     name: Build c8 image with cvmfs mirror and push to multiple registries
-    runs-on: [self-hosted, cvmfs]
+    runs-on: [self-hosted]
     permissions:
       packages: write
       contents: read
