--- a/sl7-minimal/Dockerfile
+++ b/sl7-minimal/Dockerfile
@@ -24,5 +24,6 @@ RUN yum clean all \
     wget curl tar zip rsync openssh-server \
  && yum clean all
 
+RUN mkdir -p /dunedaq/run && chmod go+rw /dunedaq/run
 
 ENTRYPOINT ["/bin/bash", "-l", "-c" ]
