--- a/c8-spack/Dockerfile
+++ b/c8-spack/Dockerfile
@@ -38,4 +38,6 @@ RUN yum clean all \
     python3-apipkg python38-pyyaml \
  && yum clean all
 
+RUN mkdir -p /dunedaq/run && chmod go+rw /dunedaq/run
+
 ENTRYPOINT ["/bin/bash"]
