--- a/.github/workflows/c8-spack-externals.yaml
+++ b/.github/workflows/c8-spack-externals.yaml
@@ -21,18 +21,19 @@ jobs:
           repository: DUNE-DAQ/daq-docker
           path: daq-docker
       
-      - name: Log in to Docker Hub
+      - name: Log in to the Container registry
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@v3
         with:
           images: |
-            dunedaq/c8-minimal
+            ghcr.io/dune-daq/sl7-minimal
           tags: |
             type=raw,value=spack-externals-slim
 
@@ -67,7 +68,7 @@ jobs:
         uses: docker/metadata-action@v3
         with:
           images: |
-            dunedaq/c8-minimal
+            ghcr.io/dune-daq/sl7-minimal
           tags: |
             type=raw,value=spack-externals
       
