--- a/.github/workflows/c8-cvmfs.yaml
+++ b/.github/workflows/c8-cvmfs.yaml
@@ -30,18 +30,19 @@ jobs:
         run: |
             docker run --rm -v /home/dingpf/cvmfs_dunedaq-dev:/cvmfs/dunedaq-development.opensciencegrid.org -v /home/dingpf/cvmfs_dunedaq:/cvmfs/dunedaq.opensciencegrid.org -v $GITHUB_WORKSPACE/daq-docker/c8-ci:/scratch dunedaq/c8-minimal:latest /scratch/create-image.sh
 
-      - name: Log in to Docker Hub
+      - name: Log in to the Container registry
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@v3
         with:
           images: |
-            dunedaq/c8-minimal
+            ghcr.io/dune-daq/c8-minimal
           tags: |
             type=raw,value=cvmfs
       
