--- a/.github/workflows/sl7-spack-externals.yaml
+++ b/.github/workflows/sl7-spack-externals.yaml
@@ -57,7 +57,7 @@ jobs:
             rm -f /home/dingpf/cvmfs_dunedaq/Dockerfile
             rm -f /home/dingpf/cvmfs_dunedaq/.dockerignore
             cd /home/dingpf/cvmfs_dunedaq
-            echo "FROM dunedaq/sl7-minimal:spack-externals-slim"> Dockerfile
+            echo "FROM ghcr.io/dune-daq/sl7-minimal:spack-externals-slim"> Dockerfile
             echo 'MAINTAINER Pengfei Ding "dingpf@fnal.gov"' >> Dockerfile
             echo "ADD spack-externals/spack-0.17.1/opt/spack/gcc-8.2.0/llvm-13.0.0-wzgrwhg4yki6etmzoay4jnztda2dx5ed /cvmfs/dunedaq.opensciencegrid.org/spack-externals/spack-0.17.1/opt/spack/gcc-8.2.0/llvm-13.0.0-wzgrwhg4yki6etmzoay4jnztda2dx5ed" >> Dockerfile
             echo "ADD spack-externals/spack-0.17.1/opt/spack/gcc-8.2.0/gcc-9.4.0-2cp2ups6vynmweqtjclm5l54zmqs56hg /cvmfs/dunedaq.opensciencegrid.org/spack-externals/spack-0.17.1/opt/spack/gcc-8.2.0/gcc-9.4.0-2cp2ups6vynmweqtjclm5l54zmqs56hg" >> Dockerfile
