--- a/.github/workflows/sl7-minimal.yaml
+++ b/.github/workflows/sl7-minimal.yaml
@@ -5,18 +5,8 @@ on:
     branches: [ develop ]
     tags:
       - 'v*'
-    paths-ignore:
-      - 'README.md'
-      - 'c8/**'
-      - 'c8-minimal/**'
-      - 'c8-spack/**'
-      - 'c8-spack-externals/**'
-      - 'sl7/**'
-      - 'sl7-ci/**'
-      - 'sl7-spack/**'
-      - 'sl7-spack-externals/**'
-      - 'c8-ci/**'
-      - '.github/**'
+    paths:
+      - dockerfiles/sl7-minimal.dockerfile
 
   workflow_dispatch:
 
@@ -30,16 +20,19 @@ jobs:
       contents: read
     steps:
       - name: Check out the repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+        with:
+          repository: DUNE-DAQ/daq-docker
+          path: daq-docker 
       
       - name: Log in to Docker Hub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       
       - name: Log in to the Container registry
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
@@ -47,7 +40,7 @@ jobs:
       
       - name: Extract metadata (tags, labels) for Docker
         id: meta
-        uses: docker/metadata-action@v3
+        uses: docker/metadata-action@v4
         with:
           images: |
             dunedaq/sl7-minimal
@@ -56,11 +49,18 @@ jobs:
             type=raw,value=latest
             type=ref,event=branch
             type=ref,event=tag
+
+      - name: prepare build dir
+        run: |
+          build_dir="${{ github.workspace }}/docker-build"
+          mkdir -p $build_dir
+          cd $build_dir
+          cp ${{ github.workspace }}/daq-docker/dockerfiles/sl7-minimal.dockerfile $build_dir
       
       - name: Build and push Docker images
-        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+        uses: docker/build-push-action@v3
         with:
-          context: ./sl7-minimal
+          context: ${{ github.workspace }}/docker-build
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
