--- a/.github/workflows/externals.yaml
+++ b/.github/workflows/externals.yaml
@@ -39,12 +39,13 @@ jobs:
             type=raw,value=latest
 
       - name: prepare build dir
+        id: prep_build_dir
         run: |
           build_dir="/home/dingpf/cvmfs_dunedaq"
           cd $build_dir
           refresh_date=$(date +%y-%m-%d)
           echo "FROM ghcr.io/dune-daq/sl7-minimal:latest" > Dockerfile
-          echo "MAINTAINER Pengfei Ding \"dingpf@fnal.gov\"" >> Dockerfile
+          echo 'MAINTAINER Pengfei Ding "dingpf@fnal.gov"' >> Dockerfile
           echo "ENV REFRESHED_AT $refresh_date" >> Dockerfile
           echo "ADD spack-externals /cvmfs/dunedaq.opensciencegrid.org/spack-externals" >> Dockerfile
           echo "ADD pypi-repo /cvmfs/dunedaq.opensciencegrid.org/pypi-repo" >> Dockerfile
@@ -78,6 +79,7 @@ jobs:
   build_c8_externals:
     name: build_c8
     runs-on: ubuntu-latest
+    needs: build_sl7_externals
     permissions:
       packages: write
       contents: read
@@ -111,7 +113,7 @@ jobs:
           cd $build_dir
           refresh_date=$(date +%y-%m-%d)
           echo "FROM ghcr.io/dune-daq/c8-minimal:latest" > Dockerfile
-          echo "MAINTAINER Pengfei Ding \"dingpf@fnal.gov\"" >> Dockerfile
+          echo 'MAINTAINER Pengfei Ding "dingpf@fnal.gov"' >> Dockerfile
           echo "ENV REFRESHED_AT $refresh_date" >> Dockerfile
           echo "COPY --from=ghcr.io/dune-daq/sl7-externals:latest /cvmfs/dunedaq.opensciencegrid.org/spack-externals /cvmfs/dunedaq.opensciencegrid.org/spack-externals" >> Dockerfile
           echo "COPY --from=ghcr.io/dune-daq/sl7-externals:latest /cvmfs/dunedaq.opensciencegrid.org/pypi-repo /cvmfs/dunedaq.opensciencegrid.org/pypi-repo" >> Dockerfile
