--- a/.github/workflows/externals.yaml
+++ b/.github/workflows/externals.yaml
@@ -15,12 +15,6 @@ jobs:
       packages: write
       contents: read
     steps:
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      
       - name: Log in to the Container registry
         uses: docker/login-action@v2
         with:
@@ -33,7 +27,6 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: |
-            dunedaq/sl7-externals
             ghcr.io/dune-daq/sl7-externals
           tags: |
             type=raw,value=latest
@@ -70,6 +63,25 @@ jobs:
             docker container prune -f
             docker network prune -f
             docker volume prune -f
+
+  push_sl7_externals_to_dockerhub:
+    name: push_sl7_ext_dockerhub
+    runs-on: ubuntu-latest
+    needs: build_sl7_externals
+    permissions:
+      packages: write
+      contents: read
+    steps:
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: push to dockerhub
+        run: |
+          docker pull ghcr.io/dune-daq/sl7-externals:latest
+          docker tag ghcr.io/dune-daq/sl7-externals:latest dunedaq/sl7-externals:latest
+          docker push dunedaq/sl7-externals:latest
 
   build_c8_externals:
     name: build_c8
