--- a/.github/workflows/externals.yaml
+++ b/.github/workflows/externals.yaml
@@ -117,6 +117,7 @@ jobs:
       - name: prepare build dir
         run: |
           build_dir="${{ github.workspace }}/docker-build"
+          mkdir -p $build_dir
           cd $build_dir
           refresh_date=$(date +%y-%m-%d)
           echo "FROM ghcr.io/dune-daq/c8-minimal:latest" > Dockerfile
