--- a/.github/workflows/externals.yaml
+++ b/.github/workflows/externals.yaml
@@ -132,7 +132,7 @@ jobs:
       - name: Build and push Docker images
         uses: docker/build-push-action@v3
         with:
-          context: /home/dingpf/cvmfs_dunedaq
+          context: ${{ github.workspace }}/docker-build
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
