--- a/.github/workflows/externals.yaml
+++ b/.github/workflows/externals.yaml
@@ -90,13 +90,7 @@ jobs:
     permissions:
       packages: write
       contents: read
-    steps:
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      
+    steps:    
       - name: Log in to the Container registry
         uses: docker/login-action@v2
         with:
@@ -109,7 +103,6 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: |
-            dunedaq/c8-externals
             ghcr.io/dune-daq/c8-externals
           tags: |
             type=raw,value=latest
@@ -136,3 +129,22 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+
+  push_c8_externals_to_dockerhub:
+    name: push_c8_ext_dockerhub
+    runs-on: ubuntu-latest
+    needs: build_c8_externals
+    permissions:
+      packages: write
+      contents: read
+    steps:
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: push to dockerhub
+        run: |
+          docker pull ghcr.io/dune-daq/c8-externals:latest
+          docker tag ghcr.io/dune-daq/c8-externals:latest dunedaq/c8-externals:latest
+          docker push dunedaq/c8-externals:latest
