--- a/.github/workflows/slim_externals.yaml
+++ b/.github/workflows/slim_externals.yaml
@@ -61,6 +61,7 @@ jobs:
         run: |
 
             rm -f /home/dingpf/cvmfs_dunedaq/Dockerfile
+            rm -f /home/dingpf/cvmfs_dunedaq/.dockerignore
             docker image prune -f
             docker container prune -f
             docker network prune -f
