fix gcc12 c8 image

--- a/.github/workflows/slim_externals_gcc12.yaml
+++ b/.github/workflows/slim_externals_gcc12.yaml
@@ -106,7 +106,7 @@ jobs:
           images: |
             ghcr.io/dune-daq/c8-slim-externals
           tags: |
-            type=raw,value=latest
+            type=raw,value=gcc12
 
       - name: prepare build dir
         run: |
