--- a/.github/workflows/alma9.yaml
+++ b/.github/workflows/alma9.yaml
@@ -52,6 +52,7 @@ jobs:
       
       - name: Build and push Docker images
         uses: docker/build-push-action@v3
+        with:
           context: ${{ github.workspace }}/docker-build
           push: true
           tags: ${{ steps.meta.outputs.tags }}
