--- a/.github/workflows/slim_externals.yaml
+++ b/.github/workflows/slim_externals.yaml
@@ -111,3 +111,50 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+
+  build_alma9_slim_externals:
+    name: build_alma9
+    runs-on: [self-hosted]
+    needs: build_sl7_slim_externals
+    permissions:
+      packages: write
+      contents: read
+    steps:    
+      - name: Log in to the Container registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: |
+            ghcr.io/dune-daq/alma9-slim-externals
+          tags: |
+            type=raw,value=latest
+
+      - name: prepare build dir
+        run: |
+          build_dir="${{ github.workspace }}/docker-build"
+          mkdir -p $build_dir
+          cd $build_dir
+          refresh_date=$(date +%y-%m-%d)
+          echo "FROM ghcr.io/dune-daq/alma9-spack:latest" > Dockerfile
+          echo 'MAINTAINER Pengfei Ding "dingpf@fnal.gov"' >> Dockerfile
+          echo "ENV REFRESHED_AT $refresh_date" >> Dockerfile
+          echo "COPY --from=ghcr.io/dune-daq/sl7-slim-externals:latest /cvmfs/dunedaq.opensciencegrid.org/spack /cvmfs/dunedaq.opensciencegrid.org/spack" >> Dockerfile
+          echo "COPY --from=ghcr.io/dune-daq/sl7-slim-externals:latest /cvmfs/dunedaq.opensciencegrid.org/pypi-repo /cvmfs/dunedaq.opensciencegrid.org/pypi-repo" >> Dockerfile
+          echo "COPY --from=ghcr.io/dune-daq/sl7-slim-externals:latest /cvmfs/dunedaq.opensciencegrid.org/tools /cvmfs/dunedaq.opensciencegrid.org/tools" >> Dockerfile
+          echo "COPY --from=ghcr.io/dune-daq/sl7-slim-externals:latest /cvmfs/dunedaq.opensciencegrid.org/setup_dunedaq.sh /cvmfs/dunedaq.opensciencegrid.org/setup_dunedaq.sh" >> Dockerfile
+          echo 'ENTRYPOINT ["/bin/bash"]' >> Dockerfile
+
+      - name: Build and push Docker images
+        uses: docker/build-push-action@v3
+        with:
+          context: ${{ github.workspace }}/docker-build
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
